--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html> 
+<html lang="pt-br"> 
+    <meta charset="UTF-8">
     # Spianatta
 
-    <p><h1> Spianatta </h1></p>
+    <p><h1>Spianatta</h1></p>
 
 
     <p><h1><em>10 anos de experiência fizeram nossas massas de pizza ainda mais saborosas!</em></h1></p>
