--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br"> 
     <meta charset="UTF-8">
+    <titlte>Spianatta</titlte>
     # Spianatta
 
     <p><h1>Spianatta</h1></p>
