--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     
         <p>Nosso principal objetivo é prazer pela qualidade de nossos produtos e satisfação de nossos clientes e para isso levamos em consideração: rígidos padrões de higiene, matérias primas selecionadas e importadas e utilizamos um processo mais artesanal, que agrega mais qualidade e carinho em nossos produtos.</p>
 
-        <p style="font-size: 20px; test-align: center"><em><strong>apaixonados pelo o que fazemos e procuramos a cada dia, fazer o melhor para você e sua família!</strong>.</em></p>
+        <p style="font-size: 20px; text-align: center"><em><strong>apaixonados pelo o que fazemos e procuramos a cada dia, fazer o melhor para você e sua família!</strong>.</em></p>
     </body>
  </html>
