--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <titlte>Spianatta</titlte>
+        <style> 
+        p{
+            text-align: center
+        }
+        </style>
     </head>
 
     <body>
