--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <img src="foto1.png">
+        <img id="banner" src="foto1.png">
 
         <h2><em>10 anos de experiência fizeram nossas massas de pizza ainda mais saborosas!</em></h2>
     
