--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <body>
         <img id="banner" src="foto1.png">
 
+        <h1>Spianatta</h1>
+
         <h2><em>10 anos de experiência fizeram nossas massas de pizza ainda mais saborosas!</em></h2>
     
         <p>Uma empresa jovem, situada no polo industrial de Curitiba, com apenas 10 anos no mercado.</p>
