--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <img id="banner" src="foto1.png">
+        <center><img id="banner" src="foto1.png"></center>
 
         <h1>Spianatta</h1>
 
