--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     </head>
 
     <body>
+        <header class="navegação">
+            <div class="caixa">
+                
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        
         <center><img id="banner" src="foto1.png"></center>
 
         <h1>Spianatta</h1>
