--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </header>
         
-        <center><img id="banner" src="kisspng-pizza-hut-take-out-italian-cuisine-restaurant-food-pizza-logo-logo-vector-5a93a9aa7cc384.4534463715196266665111.png"></center>
+        <center><img id="banner" src="foto1.png"></center>
 
         <h1>Spianatta</h1>
 
