--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
         <p style="font-size: 20px"><em><strong>apaixonados pelo o que fazemos e procuramos a cada dia, fazer o melhor para você e sua família!</strong>.</em></p>
     </body>
+      
+    <center><img id="banner" src="foto1.png"></center>
     
     <footer>
         <div class="rodape">
