--- a/produtos.html
+++ b/produtos.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1><img src="Fatias-Pizza-Png.png"></h1>
+            <h1><img src="foto1.png"></h1>
         </header>
     </body>
 </html>
