--- a/produtos.html
+++ b/produtos.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1><img src="foto1.png"></h1>
+            <h1><img src="foto1.png" class="logo"></h1>
 
             <ul>
                 <li><a href="index.html">Home</a></li>
