--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </header>
         
-        <h1>Spianatta</h1>
+        <h1>SPIANATTA</h1>
 
         <h2><em>10 anos de experiência fizeram nossas massas de pizza ainda mais saborosas!</em></h2>
     
