--- a/produtos.html
+++ b/produtos.html
@@ -9,15 +9,17 @@
     </head>
     <body>
         <header>
-            <h1><img src="foto1.png" class="logo"></h1>
+            <div>
+                 <h1><img src="foto1.png" class="logo"></h1>
 
-            <nav>
-                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                 </ul>
-            </nav>
+                 <nav>
+                    <ul>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
     </body>
 </html>
