--- a/produtos.html
+++ b/produtos.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <div>
+            <div class="caixa">
                  <h1><img src="foto1.png" class="logo"></h1>
 
                  <nav>
