--- a/produtos.html
+++ b/produtos.html
@@ -21,5 +21,22 @@
                 </nav>
             </div>
         </header>
+
+        <main>
+            <ul>
+                <li>
+                    <h2>Pizza Tradicional</h2>
+                    <img>
+                    <p></p>
+                    <p></p>
+                </li>
+                <li>
+                    <h2>Pizza com Molho</h2>
+                    <img>
+                    <p></p>
+                    <p></p>
+                </li>
+            </ul>
+        </main>
     </body>
 </html>
