--- a/produtos.html
+++ b/produtos.html
@@ -26,7 +26,7 @@
             <ul>
                 <li>
                     <h2>Pizza Tradicional</h2>
-                    <img src="istockphoto-1227621205-612x612.jpg">
+                    <img src="istockphoto-1227621205-612x612.png">
                     <p></p>
                     <p></p>
                 </li>
