--- a/produtos.html
+++ b/produtos.html
@@ -27,14 +27,14 @@
                 <li>
                     <h2>Pizza Tradicional</h2>
                     <img src="pizzasemmolho.png">
-                    <p></p>
-                    <p></p>
+                    <p>Massa de pizza sem molho</p>
+                    <p> R$4,50</p>
                 </li>
                 <li>
                     <h2>Pizza com Molho</h2>
                     <img>
-                    <p></p>
-                    <p></p>
+                    <p>Massa de pizza com molho</p>
+                    <p> R$5,50</p>
                 </li>
             </ul>
         </main>
