--- a/produtos.html
+++ b/produtos.html
@@ -26,7 +26,7 @@
             <ul>
                 <li>
                     <h2>Pizza Tradicional</h2>
-                    <img src="pizzasemmolho.png">
+                    <img src="pizzasemmolho.jpg">
                     <p>Massa de pizza sem molho</p>
                     <p> R$4,50</p>
                 </li>
