--- a/produtos.html
+++ b/produtos.html
@@ -32,7 +32,7 @@
                 </li>
                 <li>
                     <h2>Pizza com Molho</h2>
-                    <img>
+                    <img src="pizzacommolho.png">
                     <p>Massa de pizza com molho</p>
                     <p> R$5,50</p>
                 </li>
