--- a/produtos.html
+++ b/produtos.html
@@ -13,7 +13,7 @@
                  <h1><img src="foto1.png" class="logo"></h1>
 
                  <nav>
-                    <ul>
+                    <ul class="produtos">
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="produtos.html">Produtos</a></li>
                         <li><a href="contato.html">Contato</a></li>
@@ -26,13 +26,14 @@
             <ul>
                 <li>
                     <h2>Pizza Tradicional</h2>
-                    <img src="pizzasemmolho.jpg">
+                    <img src="pizzasemmolho.jpg" class="imagem">
+
                     <p>Massa de pizza sem molho</p>
                     <p> R$4,50</p>
                 </li>
                 <li>
                     <h2>Pizza com Molho</h2>
-                    <img src="pizzacommolho.png">
+                    <img src="pizzacommolho.png" class="imagem">
                     <p>Massa de pizza com molho</p>
                     <p> R$5,50</p>
                 </li>
