--- a/produtos.html
+++ b/produtos.html
@@ -23,7 +23,7 @@
         </header>
 
         <main>
-            <ul>
+            <ul class="produtos">
                 <li>
                     <h2>Pizza Tradicional</h2>
                     <img src="pizzasemmolho.jpg" class="imagem1">
