--- a/produtos.html
+++ b/produtos.html
@@ -39,5 +39,10 @@
                 </li>
             </ul>
         </main>
+
+        <footer>
+           <img src=""
+           <p>copyright comercio de massas Spianatta</p>
+        </footer>
     </body>
 </html>
