--- a/produtos.html
+++ b/produtos.html
@@ -41,7 +41,7 @@
         </main>
 
         <footer>
-           <img src=""
+           <img src="logo pizza-convertio"
            <p>copyright comercio de massas Spianatta</p>
         </footer>
     </body>
