--- a/produtos.html
+++ b/produtos.html
@@ -41,7 +41,7 @@
         </main>
 
         <footer>
-           <img src="pizza.png"
+           <img src="pizza.png">
            <p>copyright comercio de massas Spianatta</p>
         </footer>
     </body>
