--- a/produtos.html
+++ b/produtos.html
@@ -26,8 +26,7 @@
             <ul class="produtos">
                 <li>
                     <h2>Pizza Tradicional</h2>
-                    <img src="pizzasemmolho.jpg" class="imagem1">
-
+                    <img src="pizzasemmolho.jpg" class="imagem">
                     <p>Massa de pizza sem molho</p>
                     <p> R$4,50</p>
                 </li>
