--- a/produtos.html
+++ b/produtos.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>Produtos - Spianatta</title>
-
+        <meta charset="UTF8">
+        <title>Produtos - Confeitaria Dois Amores</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="produtos.css">
     </head>
+
     <body>
         <header>
             <div class="caixa">
-                 <h1><img src="foto1.png" class="logo"></h1>
+                <h1><img src="logo.jpg" class="logo"></h1>
 
-                 <nav>
-                    <ul class="produtos">
-                        <li><a href="index.html">HOME</a></li>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="produtos.html">Produtos</a></li>
                         <li><a href="contato.html">Contato</a></li>
                     </ul>
@@ -22,26 +22,32 @@
             </div>
         </header>
 
-        <main>
-            <ul class="produtos">
-                <li>
-                    <h2>Pizza Tradicional</h2>
-                    <img src="pizzasemmolho.jpg" class="imagem">
-                    <p>Massa de pizza sem molho</p>
-                    <p> R$4,50</p>
-                </li>
-                <li>
-                    <h2>Pizza com Molho</h2>
-                    <img src="pizzacommolho.png" class="imagem">
-                    <p>Massa de pizza com molho</p>
-                    <p> R$5,50</p>
-                </li>
-            </ul>
-        </main>
-
-        <footer>
-           <img src="pizza.png">
-           <p>copyright comercio de massas Spianatta</p>
-        </footer>
-    </body>
-</html>
+    <main>
+        <ul class="produtos">
+            <li>
+                <h2>Bolos</h2>
+                <img src="bolo.jpg" class="imagem">
+                <p class="produto-descriçao">Sabores: leite ninho, chocolate, dois amores</p>
+                <p class="produto-preço">R$ 60,00</p>
+            </li>
+            <li>  
+                <h2>Tortas</h2>
+                <img src="torta.jpg" class="imagem">
+                <p class="produto-descriçao">Sabores: limão, maracujá, banoffe</p>
+                <p class="produto-preço">R$ 40,00</p>
+            </li>
+            <li>
+                <h2>Cupcake</h2>
+                <img src="cupcake.jpg" class= "imagem">
+                <p class="produto-descriçao">Sabores: chocolate, morango, baunilha</p>
+                <p class="produto-preço">R$ 8,00</p>
+            </li>
+        </ul>         
+    </main> 
+    
+    <footer>
+        <p class="copyrigth">&copy;Copyrigth - Confeitaria Dois Amores 2022</p>
+    </footer>
+     
+  </body>                       
+</html> 
