--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="logo.jpg" class="logo"></h1>
+                <h1><img src="foto1.png" class="logo"></h1>
 
                 <nav>
                     <ul>
@@ -25,27 +25,22 @@
     <main>
         <ul class="produtos">
             <li>
-                <h2>Bolos</h2>
-                <img src="bolo.jpg" class="imagem">
+                <h2>Com Molho</h2>
+                <img src="commolho.png" class="imagem">
                 <p class="produto-descriçao">Sabores: leite ninho, chocolate, dois amores</p>
                 <p class="produto-preço">R$ 60,00</p>
             </li>
             <li>  
-                <h2>Tortas</h2>
-                <img src="torta.jpg" class="imagem">
+                <h2>Sem Molho</h2>
+                <img src="semmolho.jpg" class="imagem">
                 <p class="produto-descriçao">Sabores: limão, maracujá, banoffe</p>
                 <p class="produto-preço">R$ 40,00</p>
-            </li>
-            <li>
-                <h2>Cupcake</h2>
-                <img src="cupcake.jpg" class= "imagem">
-                <p class="produto-descriçao">Sabores: chocolate, morango, baunilha</p>
-                <p class="produto-preço">R$ 8,00</p>
             </li>
         </ul>         
     </main> 
     
     <footer>
+
         <p class="copyrigth">&copy;Copyrigth - Confeitaria Dois Amores 2022</p>
     </footer>
      
