--- a/produtos.html
+++ b/produtos.html
@@ -40,7 +40,7 @@
     </main> 
     
     <footer>
-
+        <center><img src="foto pizza.png" class="rodapé"></center>
         <p class="copyrigth">&copy;Copyrigth - Confeitaria Dois Amores 2022</p>
     </footer>
      
