--- a/produtos.html
+++ b/produtos.html
@@ -26,7 +26,7 @@
         <ul class="produtos">
             <li>
                 <h2>Com Molho</h2>
-                <img src="commolho.png" class="imagem">
+                <img src="commolho.png" class="imagem1">
                 <p class="produto-descriçao">Sabores: leite ninho, chocolate, dois amores</p>
                 <p class="produto-preço">R$ 60,00</p>
             </li>
