--- a/produtos.html
+++ b/produtos.html
@@ -27,14 +27,20 @@
             <li>
                 <h2>Com Molho</h2>
                 <img src="commolho.png" class="imagem1">
-                <p class="produto-descriçao">Sabores: leite ninho, chocolate, dois amores</p>
-                <p class="produto-preço">R$ 60,00</p>
+                <p class="produto-descriçao">Pizza levinha com molho de tomate</p>
+                <p class="produto-preço">R$ 5,00</p>
             </li>
             <li>  
                 <h2>Sem Molho</h2>
                 <img src="semmolho.jpg" class="imagem">
-                <p class="produto-descriçao">Sabores: limão, maracujá, banoffe</p>
-                <p class="produto-preço">R$ 40,00</p>
+                <p class="produto-descriçao">Pizza levinha sem molho</p>
+                <p class="produto-preço">R$ 4,50</p>
+            </li>
+            <li>
+                <h2>combo</h2>
+                <img src=""class="imagem">
+                <p class="produto-descriçao"> Pizza com molho e sem molho</p>
+                <p class="produto-preço">R$ 8,00</p>
             </li>
         </ul>         
     </main> 
