--- a/produtos.html
+++ b/produtos.html
@@ -31,16 +31,16 @@
                 <p class="produto-preço">R$ 5,00</p>
             </li>
             <li>  
-                <h2>Sem Molho</h2>
+                <h2>Tradicional</h2>
                 <img src="semmolho.jpg" class="imagem">
                 <p class="produto-descriçao">Pizza levinha sem molho</p>
                 <p class="produto-preço">R$ 4,50</p>
             </li>
             <li>
-                <h2>combo</h2>
+                <h2>Recheada</h2>
                 <img src=""class="imagem">
-                <p class="produto-descriçao"> Pizza com molho e sem molho</p>
-                <p class="produto-preço">R$ 8,00</p>
+                <p class="produto-descriçao">Sabores: calabresa, portuguesa e frango com catupiry </p>
+                <p class="produto-preço">R$ 30,00</p>
             </li>
         </ul>         
     </main> 
