--- a/produtos.html
+++ b/produtos.html
@@ -38,8 +38,8 @@
             </li>
             <li>
                 <h2>Recheada</h2>
-                <img src=""class="imagem">
-                <p class="produto-descriçao">Sabores: calabresa, portuguesa e frango com catupiry </p>
+                <img src="recheada.jpg"class="imagem">
+                <p class="produto-descriçao">Sabores: calabresa, marguerita, portuguesa e frango com catupiry </p>
                 <p class="produto-preço">R$ 30,00</p>
             </li>
         </ul>         
