--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <p>Nosso principal objetivo é prazer pela qualidade de nossos produtos e satisfação de nossos clientes e para isso levamos em consideração: rígidos padrões de higiene, matérias primas selecionadas e importadas e utilizamos um processo mais artesanal, que agrega mais qualidade e carinho em nossos produtos.</p>
 
         <p style="font-size: 20px"><em><strong>apaixonados pelo o que fazemos e procuramos a cada dia, fazer o melhor para você e sua família!</strong>.</em></p>
+        
+
+
+
+
+        <p style="font-size: 30px;"><em> Estamos situados na Rua Sebastião Ribeiro Bastista 560, Fazendinha/ Curitiba
+
     </body>
       
     <center><img id="banner" src="foto1.png"></center>
