--- a/produtos.html
+++ b/produtos.html
@@ -38,7 +38,7 @@
             </li>
             <li>
                 <h2>Recheada</h2>
-                <img src="recheada.jpg"class="imagem">
+                <img src="recheada1.jpg"class="imagem">
                 <p class="produto-descriçao">Sabores: calabresa, marguerita, portuguesa e frango com catupiry </p>
                 <p class="produto-preço">R$ 30,00</p>
             </li>
