--- a/produtos.html
+++ b/produtos.html
@@ -46,8 +46,8 @@
     </main> 
     
     <footer>
-        <center><img src="foto pizza.png" class="rodapé"></center>
-        <p class="copyrigth">&copy;Copyrigth - Confeitaria Dois Amores 2022</p>
+        <center><img src="" class="rodapé"></center>
+        <p class="copyrigth">&copy;Copyrigth - Spianatta</p>
     </footer>
      
   </body>                       
