--- a/produtos.html
+++ b/produtos.html
@@ -46,7 +46,7 @@
     </main> 
     
     <footer>
-        <center><img src="" class="rodapé"></center>
+        <center><img src="fundo.webp" class="rodapé"></center>
         <p class="copyrigth">&copy;Copyrigth - Spianatta</p>
     </footer>
      
