--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </header>
         
-        <img id="banner1.jpg" src="banner1.jpg">
+        <img id="banner1" src="banner1.jpg">
         
         <h1>SPIANATTA</h1>
 
