--- a/contato.html
+++ b/contato.html
@@ -63,6 +63,37 @@
 
                 <input type="submit" value="Enviar formulário" class="enviar">
              </form>
+
+             <table>
+                <thead>
+                    <tr>
+                        <th>Dia</th>
+                        <th>Horário</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>   
+                         <td>Segunda</td>
+                         <td>7h ~ 17h</td>
+                    </tr>
+                    <tr>
+                        <td>terça</td>
+                        <td>7h ~ 17h</td>
+                    </tr>
+                    <tr>
+                        <td>quarta</td>
+                        <td>7h ~ 17h</td>
+                    </tr>
+                    <tr>
+                        <td>Quinta</td>
+                        <td>7h ~ 17h</td>
+                    </tr>
+                    <tr>
+                        <td>Sexta</td>
+                        <td>7h ~ 17h</td>
+                    </tr>
+                </tbody>
+             </table>
         </main>
 
         <footer>
