--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>SPIANATTA</title>
-        <link rel="stylesheet" href="style-home.css">
-        <link rel="stylesheet" href="style-home.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="reset.css">
 
         <header>
             <div class="caixa">
@@ -29,7 +29,7 @@
     
                
 
-              <h1>SPIANATTA</h1>
+              <h1 class="titulo-principal">SPIANATTA</h1>
 
 
         <h2><em>10 anos de experiência fizeram nossas massas de pizza ainda mais saborosas!</em></h2>
